<resources>
    <string name="app_name">View &amp; Resources</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="select">Select</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="birthday">Birthday</string>
    <string name="notes">Notes</string>
    <string name="cart_items">some items in your cart</string>
    <string name="your_order_total">Your order total</string>
    <string name="default_price">41.2</string>
    <string name="tax">Tax</string>
    <string name="shipping">Shipping</string>
    <string name="subtotal">Subtotal</string>
    <string name="pay_now">Pay now</string>
    <string name="on_the_top">On the top</string>
    <string name="caption">Caption</string>
    <string name="sign_in">Sign in</string>
    <string name="register_1">REGISTER</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="sign_in_1">SIGN IN</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
</resources>